--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "Oh No You Didn't!",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "manifest_version": 2,
     "description": "Automatically reload tabs that have crashed (Aw Snap! He's Dead Jim etc.). Handy for Kiosk mode where access is limited.",
-    "homepage_url": "http://github.com/unclespode/ohnoyoudidnt",
+    "homepage_url": "http://github.com/khpeet/ohnoyoudidnt",
     "icons": {
         "16": "icons/icon16.png",
         "19" : "icons/icon19.png",
